--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -30,3 +30,5 @@ vi:
     checkout: "Thanh toán"
     quantity: "Số lượng"
     add_success: "Đã thêm sản phẩm vào giỏ hàng"
+    update: "cập nhật"
+    update_success: "cập nhật giỏ hàng thành công"
