--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,3 +30,5 @@ en:
     checkout: "Checkout"
     quantity: "Quantity"
     add_success: "Added product to cart"
+    update: "Update"
+    update_success: "Update your cart sucess"
