--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,4 +1,14 @@
 vi:
+  count_err: "Sai sót"
+  login:
+    login: "Đăng nhập"
+    signup: "Đăng ký"
+    success: "Đăng nhập thành công"
+    failed: "Đăng nhập không thành công"
+    loggout_success: "Bạn đã đăng xuất"
+    signup_success: "Đăng ký thành công"
+    signup_failds: "Đăng ký không thành công"
+  logout: "Đăng xuất"
   store:
     store: "levlinh"
     home: "Trang Chủ"
