--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,7 @@ en:
     failed: "Login failed"
     loggout_success: "You are logouted"
     signup_success: "Register success"
-    signup_failds: "Register failed"
+    signup_failds: "Email or password is incorrect"
   logout: "Logout"
   store:
     store: "levlinh"
@@ -28,6 +28,7 @@ en:
     add_to_cart: "Add To Cart"
     quantity_on_store: "Quantity on Store :"
     description: "Description:"
+    search: "Search"
   cart:
     cart: "Carts"
     product: "Product"
@@ -43,3 +44,19 @@ en:
     update: "Update"
     update_success: "Update your cart sucess"
     delete_success: "Removed item from cart"
+  order:
+    checkout: "Checkout"
+    bill: "Bill"
+    user_shipping: "User Shipping"
+    phone_shipping: "Phone Shipping"
+    address_shipping: "Addess Shipping"
+    messages: "Messages"
+    success: "Order success"
+    faild: "Order failed"
+    confirm: "Confirm"
+    your_order: "Your order"
+    info: "Shipment Details"
+    name_shipping: "Name Customer"
+    phone_shipping: "Phone Customer"
+    address_shipping: "Address Customer"
+    messages: "Messages"
