--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -7,7 +7,7 @@ vi:
     failed: "Đăng nhập không thành công"
     loggout_success: "Bạn đã đăng xuất"
     signup_success: "Đăng ký thành công"
-    signup_failds: "Đăng ký không thành công"
+    signup_failds: "Email hoặc mật khẩu không chính xác"
   logout: "Đăng xuất"
   store:
     store: "levlinh"
@@ -28,6 +28,7 @@ vi:
     add_to_cart: "Thêm vào giỏ hàng"
     quantity_on_store: "Số lượng trong Cửa hàng:"
     description: "Chi tiết:"
+    search: "Tìm kiếm"
   cart:
     cart: "Giỏ hàng"
     product: "Sản phẩm"
@@ -43,3 +44,19 @@ vi:
     update: "cập nhật"
     update_success: "cập nhật giỏ hàng thành công"
     delete_success: "Đã xóa mặt hàng khỏi giỏ hàng"
+  order:
+    checkout: "Thanh toán"
+    bill: "Hóa đơn"
+    user_shipping: "Người nhận hàng"
+    phone_shipping: "Số điện thoại người nhận"
+    address_shipping: "Địa chỉ giao hàng"
+    messages: "Ghi chú"
+    success: "Đặt hàng thành công"
+    faild: "Đơn đặt hàng chưa được ghi nhận. Bạn phải điền đủ thông tin giao hàng"
+    confirm: "Xác nhận"
+    your_order: "Đơn đặt hàng của bạn"
+    info: "Thông tin giao hàng"
+    name_shipping: "Tên khách hàng"
+    phone_shipping: "Số điện thoại khách hàng"
+    address_shipping: "Địa chỉ khách hàng"
+    messages: "Ghi chú"
